--- a/TrackMyCourse.Api/TrackMyCourse.Api.csproj
+++ b/TrackMyCourse.Api/TrackMyCourse.Api.csproj
@@ -19,6 +19,10 @@
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.3.0" />
+	  <PackageReference Include="Serilog" Version="3.1.1" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
   </ItemGroup>
