--- a/TrackMyCourse.Api/appsettings.Development.json
+++ b/TrackMyCourse.Api/appsettings.Development.json
@@ -10,5 +10,36 @@
     "Issuer": "TrackMyCourse",
     "Audience": "TrackMyCourse",
     "ExpiryMinutes": "60"
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/Logs/log-development-.txt",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "Properties": {
+      "Application": "TrackMyCourse",
+      "Environment": "Development"
+    }
   }
 }
+
