-ADD: Auth Service and Password Hashing Functionality

--- a/TrackMyCourse.Api/appsettings.Development.json
+++ b/TrackMyCourse.Api/appsettings.Development.json
@@ -11,9 +11,11 @@
     "Audience": "TrackMyCourse",
     "ExpiryMinutes": "60"
   },
-
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -35,11 +37,28 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
     "Properties": {
       "Application": "TrackMyCourse",
       "Environment": "Development"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:12372",
+          "https://localhost:44332",
+          "http://localhost:5170",
+          "https://localhost:7066"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
-
