--- a/TrackMyCourse.Api/TrackMyCourse.Api.csproj
+++ b/TrackMyCourse.Api/TrackMyCourse.Api.csproj
@@ -15,6 +15,7 @@
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	  <PackageReference Include="FluentValidation" Version="11.9.0" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.1" />
