--- a/TrackMyCourse.Api/TrackMyCourse.Api.csproj
+++ b/TrackMyCourse.Api/TrackMyCourse.Api.csproj
@@ -19,6 +19,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
 	  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.3.0" />
 	  <PackageReference Include="Serilog" Version="3.1.1" />
 	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
@@ -26,6 +27,10 @@
 	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\Caches\" />
   </ItemGroup>
 
 </Project>
